Fix merge issues with base branchy
Fix merge issues with base branchy

#feature/3085